# cremecracker

./: Cargo.toml  LICENSE  README.md
paas-api/: .env.example  Cargo.toml  README.md  tests.env
paas-api/migrations/: 20231226000000_init.down.sql  20231226000000_init.up.sql
paas-api/src/: auth.rs  config.rs  db.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs  tests.rs
paas-api/tests/: auth.rs  db.rs  error.rs
paas-ui/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json
paas-ui/src/: app.rs  config.rs  main.rs
paas-ui/src/api/: auth.rs  mod.rs  user.rs
paas-ui/src/components/: loading.rs  mod.rs  nav.rs
paas-ui/src/pages/: callback.rs  dashboard.rs  home.rs  login.rs  mod.rs
paas-ui/styles/: output.css
src/: main.rs
