[workspace]
members = ["paas-api", "paas-ui"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
actix-web = "4.4.0"
actix-rt = "2.9.0"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "migrate"] }
dotenv = "0.15"
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
url = "2.5.0"
jsonwebtoken = "8.3"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
leptos = { version = "0.5", features = ["csr"] }
leptos_meta = { version = "0.5", features = ["csr"] }
leptos_router = { version = "0.5", features = ["csr"] }
web-sys = { version = "0.3", features = [
    "Storage",
    "Window",
    "Location",
    "Request",
    "RequestInit",
    "RequestMode",
    "RequestCredentials",
    "Response",
    "Headers"
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo = "0.10"

[package]
name = "paas"
version.workspace = true
edition.workspace = true

[dependencies]
paas-api = { path = "./paas-api" }
actix-web = { workspace = true }
