[package]
name = "paas-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
actix-rt = { workspace = true }
actix-cors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "sqlite"] }
dotenv = { workspace = true }
oauth2 = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
thiserror = { workspace = true }
url = { workspace = true }
jsonwebtoken = "8.3"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
log = "0.4"
env_logger = "0.10"
actix-session = { version = "0.8", features = ["cookie-session"] }
time = "0.3"

[dev-dependencies]
wiremock = "0.5"
actix-http = "3.0"
actix-test = "0.1"
